<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clickable="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <cat.ycatapp.xandone.widget.UserCircleIcon
            android:id="@+id/user_icon_iv"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:scaleType="centerCrop"
            android:src="@drawable/df_head"
            app:civ_border_color="#FFEEEEEE"
            app:civ_border_width="1dp" />

        <TextView
            android:id="@+id/user_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_icon_iv"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/s_name"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <View style="@style/LeftSlideitem_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/menu_1"
            style="@style/LeftSlideitem_ll">

            <ImageView
                style="@style/LeftSlideitem_iv"
                android:background="@drawable/icon_location" />

            <TextView
                style="@style/LeftSlideitem_tv"
                android:text="@string/s_city" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_2"
            style="@style/LeftSlideitem_ll">

            <ImageView
                style="@style/LeftSlideitem_iv"
                android:background="@drawable/icon_collection" />

            <TextView
                style="@style/LeftSlideitem_tv"
                android:text="@string/s_collection" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_3"
            style="@style/LeftSlideitem_ll">

            <ImageView
                style="@style/LeftSlideitem_iv"
                android:background="@drawable/icon_about" />

            <TextView
                style="@style/LeftSlideitem_tv"
                android:text="@string/s_about" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout style="@style/LeftSlideitem_ll_noclick">

        <LinearLayout
            android:id="@+id/foot_menu_set"
            style="@style/LeftSlidefoot_ll">

            <ImageView
                style="@style/LeftSlideitem_iv"
                android:background="@drawable/icon_set" />

            <TextView
                style="@style/LeftSlideitem_tv"
                android:text="@string/s_set"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/foot_menu_exit"
            style="@style/LeftSlidefoot_ll">

            <ImageView
                android:id="@+id/image"
                style="@style/LeftSlideitem_iv"
                android:background="@drawable/icon_out" />

            <TextView
                style="@style/LeftSlideitem_tv"
                android:text="@string/s_exit"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>